@@ -13,6 +13,9 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Removed / runtime requires]
  - utf8
 
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003002
+
 2.001000 2014-10-16T19:13:57Z
  [Added / test requires]
  - File::Spec
