@@ -53,6 +53,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Removed / runtime requires]
  - utf8
 
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003002
+
 2.001000 2014-10-16T19:13:57Z
  [Added / develop requires]
  - Dist::Zilla 5
